# site-stat-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  flake.nix
.github/workflows/: docker.yml  rust.yml
admin_control/: Cargo.toml
admin_control/src/: main.rs
entity/: Cargo.toml
entity/src/: aud.rs  auds.rs  lib.rs  plan.rs  prelude.rs  select_aud.rs  site_stat.rs  start_way.rs  user_id.rs
migration/: Cargo.toml
migration/src/: data.rs  lib.rs  m20220101_000001_create_table.rs  m20250107_204426_create_site_stat_table.rs  m20250108_120158_create_auds_table.rs  m20250108_120630_populate_auds_table.rs  m20250108_130408_create_select_aud_table.rs  m20250108_212444_create_start_way_table.rs  m20250109_160455_create_plan_table.rs  m20250109_160938_populate_plans_table.rs  m20250109_162921_create_change_plan_table.rs  m20250319_203709_create_review_table.rs  m20250323_195737_create_problem_table.rs  m20250323_200124_populate_problem_table.rs  m20250323_200126_create_review_table.rs  m20251018_061409_add_user_auth_related_models.rs  m20251022_211300_populate_auth_related_tables.rs
src/: api_docs.rs  app_state.rs  auth.rs  config.rs  cors.rs  errors.rs  lib.rs  main.rs  middleware.rs  mut_state.rs  query_root.rs  rate_limit.rs  task.rs
src/api/: healthcheck.rs  mod.rs
src/api/aud/: mod.rs
src/api/auth/: login.rs  me.rs  mod.rs
src/api/get/: auds.rs  mod.rs  plans.rs  popular.rs  route.rs  sites.rs  stat.rs  user_id.rs  ways.rs
src/api/graphql/: index.rs  mod.rs  playground.rs
src/api/plan/: add.rs  get.rs  mod.rs
src/api/popular/: mod.rs
src/api/review/: add.rs  get.rs  image.rs  mod.rs
src/api/site/: add.rs  get.rs  mod.rs
src/api/stat/: aud.rs  get.rs  mod.rs  plan.rs  site.rs  way.rs
src/api/user_id/: get.rs  mod.rs
src/api/v2/: mod.rs
src/api/v2/aud/: add.rs  get.rs  mod.rs
src/api/v2/plan/: mod.rs
src/api/v2/popular/: get.rs  mod.rs
src/api/v2/review/: add.rs  image.rs  mod.rs
src/api/v2/site/: add.rs  mod.rs
src/api/v2/stat/: mod.rs
src/api/v2/user_id/: mod.rs
src/api/v2/way/: get.rs  mod.rs
src/api/way/: add.rs  mod.rs
src/entity/: aud.rs  change_plan.rs  goal.rs  mod.rs  plan.rs  prelude.rs  problem.rs  review.rs  right.rs  role.rs  role_right_goal.rs  select_aud.rs  site_stat.rs  start_way.rs  user.rs  user_id.rs  user_ids.rs  user_role.rs
src/graphql/: mod.rs  queries.rs  query_root.rs  types.rs
src/macros/: entity_ids.rs  mod.rs  paginate.rs  query.rs  responder.rs
src/query_root/: queries.rs  types.rs
src/schemas/: api_key.rs  change_plan.rs  data.rs  dto.rs  filter.rs  goals.rs  graph.rs  login_request.rs  mod.rs  pagination.rs  period.rs  popular.rs  query.rs  review.rs  rights.rs  select_aud.rs  site_stat.rs  start_way.rs  stats.rs  status.rs  token.rs  traits.rs  user.rs  user_id.rs
src/schemas/validators/: api_key.rs  auditory.rs  filter_args.rs  mod.rs  page.rs  plan.rs  size.rs
src/tests/: aud.rs  db.rs  fixtures.rs  gets.rs  healthcheck.rs  helpers.rs  mod.rs  plan.rs  popular.rs  redoc.rs  site.rs  stat.rs  swagger.rs  user_id.rs  way.rs
src/tests/fetchers/: fetch_data.rs  get_graphs.rs  locationsV2.json  mod.rs  parse_data.rs
src/tests/get/: auds.rs  mod.rs  plans.rs  popular.rs  route.rs  sites.rs  stat.rs  stats.rs  user.rs  ways.rs
src/tests/review/: add.rs  get.rs  image.rs  mod.rs
src/tests/set/: user.rs
src/tests/stat/: aud.rs  mod.rs  plan.rs  site.rs  way.rs
src/traits/: convert.rs  create.rs  entity_id.rs  filter.rs  mod.rs  paginate.rs
