[package]
name = "stat-api"
version = "1.0.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = "4.10.2"
chrono = { version = "0.4.40", default-features = false, features = ["serde", "std"] }
dotenv = "0.15"
sea-orm = { version = "1.1.10", features = ["debug-print", "runtime-tokio", "sqlx-sqlite", "with-uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
regex = "1.11.1"
actix-governor = { version = "0.8.0", features = ["log", "logger"] }
actix-multipart = "0.7.2"
actix-files = "0.6.6"
mime = "0.3.17"
validator = { version = "0.20.0", features = ["derive"] }
actix-cors = "0.7.1"
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
actix-rt = "2.10.0"
ordered-float = "5.0.0"
config = { version = "0.15.11", default-features = false }

[dev-dependencies]
bincode = { version = "2.0.1" }
mockito = "1.7.0"
rstest = "0.25.0"
serde_qs = "0.14.0"
rand = "0.9.1"

[dev-dependencies.sea-orm]
version = "1.1.10"
features = ["mock"]
