[package]
name = "stat-api"
version = "1.0.0"
edition = "2021"

[workspace]
members = [".", "migration", "admin_control"]

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde", "std"] }
dotenv = "0.15"
sea-orm = { version = "2.0.0-rc.34", features = ["debug-print", "runtime-tokio-rustls", "sqlx-sqlite", "with-uuid", "seaography"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2.0.18"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
regex = "1.11.2"
actix-governor = { version = "0.10.0", features = ["log", "logger"] }
actix-multipart = "0.7.2"
actix-files = "0.6.8"
mime = "0.3.17"
validator = { version = "0.20.0", features = ["derive"] }
actix-cors = "0.7.1"
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
reqwest = { version = "0.13.2", features = ["json"] }
actix-rt = "2.11.0"
ordered-float = "5.1.0"
config = { version = "0.15.18", default-features = false }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
rand = "0.10.0"
futures = "0.3.31"
seaography = { version = "2.0.0-rc.8", features = ["with-decimal", "with-chrono", "with-uuid"] }
async-graphql-actix-web = { version = "7.0" }
async-graphql = "7.0.19"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.89"

[dev-dependencies]
bincode = { version = "3.0.0" }
mockito = "1.7.0"
rstest = "0.26.1"
serde_qs = "1.0.0"
rand = "0.10.0"
migration = { path = "migration" }

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
opt-level = "z"
