[package]
name = "admin_control"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
sea-orm = { version = "2.0.0-rc.13", features = ["debug-print", "runtime-tokio-rustls", "sqlx-sqlite", "with-uuid"] }
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
stat-api = {path = ".."}
anyhow = "1.0.100"
