[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sea-orm = "1.1.3"
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.sea-orm-migration]
version = "1.1.3"
features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"]
